cmake_minimum_required(VERSION 3.1.0)
project(tetris)

include_directories(vendor/glad/include/)
include_directories(vendor/glfw-3.3.4/include/)
link_directories(vendor/glfw-3.3.4/lib-vc2019/)

set(SOURCES src/main.c src/tetris.c src/shader.c src/renderer.c src/window.c src/painter.c)
set(GLAD_SOURCES vendor/glad/src/glad.c)
add_executable(tetris ${SOURCES} ${GLAD_SOURCES})
set_property(TARGET tetris PROPERTY C_STANDARD 11)
if(WIN32)
    target_compile_options(tetris PRIVATE -DEBUG)
    target_link_libraries(tetris glfw3dll)
endif(WIN32)
if(UNIX)
    target_compile_options(tank PRIVATE -g)
    target_link_libraries(tank SDL2 SDL2_image dl pthread)
endif(UNIX)
